alignment issues fixed

--- a/css/style.css
+++ b/css/style.css
@@ -125,10 +125,16 @@ li span {
   margin-top: 15px;
 }
 
+img.socialeffect {
+	margin-top: -10px;
+	float: right;
+}
+
 .inner ul li {
   display: inline-block;
+	float: left;
   margin-left: 50px;
-  margin-top: 40px;
+	margin-top: 45px;
   color: #fff;
 	font-weight: bold;
 }
@@ -142,7 +148,7 @@ li span {
   from {border-radius: 100%;
 				transform: scale(1);}
     to {border-radius: 0%;
-				transform:scale(1.5);}
+				transform:scale(1.4);}
 }
 
 .inner li img:hover {
